--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -13,12 +13,26 @@ jobs:
             - uses: actions/checkout@v2
             - name: Run golangci-lint
               uses: actions-contrib/golangci-lint@v1
-    
+    test:
+      name: Run unit tests
+      runs-on: ubuntu-latest
+      steps:
+        - uses: actions/checkout@v2
+        - uses: actions/setup-go@v1
+          with:
+            go-version: 1.14
+        - name: Run test with coverage
+          run: go mod tidy && go test -race -coverprofile=coverage.txt -covermode=atomic ./...
+        - name: Upload coverage info to CodeCov
+          uses: codecov/codecov-action@v1.0.0
+          with:
+            file: ./coverage.txt
     deploy:
         name: Deploy on heroku
         runs-on: ubuntu-latest
         needs: 
             - lint
+            - test
         steps:
             - uses: actions/checkout@v2
             - name: Login to heroku container registry
