--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -26,7 +26,9 @@ jobs:
         - name: Upload coverage info to CodeCov
           uses: codecov/codecov-action@v1.0.0
           with:
+            token:
             file: ./coverage.txt
+            fail_ci_if_error: true
     deploy:
         name: Deploy on heroku
         runs-on: ubuntu-latest
