--- a/.github/workflows/pipline.yml
+++ b/.github/workflows/pipline.yml
@@ -26,9 +26,9 @@ jobs:
         - name: Upload coverage info to CodeCov
           uses: codecov/codecov-action@v1.0.0
           with:
-            token:
+            token: ${{ secrets.CODECOV_TOKEN }}
             file: ./coverage.txt
-            fail_ci_if_error: true
+            fail_ci_if_error: false
     deploy:
         name: Deploy on heroku
         runs-on: ubuntu-latest
